--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
       - name: install dependencies
-        run: pip install mkdocs
+        run: pip install mkdocs mkdocs-material
       - name: build-site
         run: mkdocs build
 
