--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,4 +3,25 @@ site_url: https://vicir.dev
 nav:
     - Home: index.md
     - About: about.md
-theme: readthedocs
+
+theme:
+  name: material
+  logo: assets/logo.png
+  features:
+    - navigation.expand
+    - toc.follow
+    - toc.integrate
+  palette: 
+    # Palette toggle for light mode
+    - media: "(prefers-color-scheme: light)"
+      scheme: default
+      toggle:
+        icon: material/brightness-7 
+        name: Switch to dark mode
+
+    # Palette toggle for dark mode
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      toggle:
+        icon: material/brightness-4
+        name: Switch to light mode
