--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,9 @@
 name: main
 on: push
 
+permissions:
+  contents: write
+
 jobs:
   build-mkdocs:
     runs-on: ubuntu-latest
@@ -10,6 +13,10 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
+      - uses: actions/cache@v2
+        with:
+          key: ${{ github.ref }}
+          path: .cache
       - name: install dependencies
         run: pip install mkdocs mkdocs-material
       - name: build-site
