--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,12 +19,7 @@ jobs:
       - name: install dependencies
         run: pip install mkdocs mkdocs-material
       - name: build-site
-        run: mkdocs gh-deploy --force
-
-  deploy-site:
-    needs: build-mkdocs
-    runs-on: ubuntu-latest
-    steps:
+        run: mkdocs build
       - uses: actions/checkout@v3
       - uses: jakejarvis/s3-sync-action@master
         with:
@@ -34,5 +29,6 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: 'eu-central-1'
-          SOURCE_DIR: gh-pages
+          SOURCE_DIR: site
+
 
