--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,22 +4,11 @@ on:
     branches:
     - main
 
-permissions:
-  contents: write
-
 jobs:
-  build-mkdocs:
+  deploy-site:
+    needs: build-mkdocs
     runs-on: ubuntu-latest
-    timeout-minutes: 2
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-      - name: install dependencies
-        run: pip install mkdocs mkdocs-material
-      - name: build-site
-        run: mkdocs build
       - uses: actions/checkout@v3
       - uses: jakejarvis/s3-sync-action@master
         with:
@@ -29,6 +18,5 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: 'eu-central-1'
-          SOURCE_DIR: site
-
+          SOURCE_DIR: ./gh-pages
 
