--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@ site_name: Semih Vicir
 site_url: https://vicir.dev
 nav:
     - Docs:
-      - index.md
+      - Hello: index.md
       - CAMBOT: cambot.md
       - Playstore Reviews: playstore.md
     - About: about.md
@@ -10,6 +10,7 @@ nav:
 theme:
   name: material
   features:
+    - navigation.footer
     - navigation.expand
     - toc.follow
     - toc.integrate
